# finsense

./: .env.example  .gitignore  Open_FinSense.bat  README.md  pyproject.toml  requirements.txt  user_config.txt
finsense/: config.py  models.py  pipeline.py  user_config.py
finsense/api/: main.py
finsense/data/: macro.py  providers.py  sentiment.py
finsense/engine/: consensus.py
finsense/experts/: fundamental.py  ml.py  quant.py
finsense/risk/: manager.py
finsense/web/: app.js  index.html  styles.css
tests/: test_pipeline.py
