[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsense-stock-intelligence"
version = "2.0.0"
description = "Institutional-grade stock intelligence: real ML, comprehensive technicals, multi-source data, portfolio risk."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.0",
    "yfinance>=0.2.50",
    "requests>=2.32.0",
    "joblib>=1.4.0",
    "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["finsense*"]
